--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ urchinTracker();
 			
 			<p style="margin-top: 10px">
 			<b>
-			[ <a href="http://home.ie.cuhk.edu.hk/~lgao/Lin_GAO_files/LinGAO_CV_new.pdf" target="blank">Scholar</a> | <a href="./file/CV.pdf" target="blank">CV</a> ]
+			[ <a href="https://scholar.google.com/citations?user=-2kts5AAAAAJ&hl=en" target="blank">Scholar</a> | <a href="./file/CV.pdf" target="blank">CV</a> ]
 			</b>
 			</p>
 	</td>
