--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ urchinTracker();
 
 <h2>Contact</h2>
 	<p>
-	<a href="">SHB 825</a>,	CUHK, Shatin, Hong Kong<br>
+	SHB 825, CUHK, Shatin, Hong Kong<br>
 	Tel: (852) 6557 4107<br>
 	<a href="mailto:wz016@ie.cuhk.edu.hk">wz016@ie.cuhk.edu.hk</a><br>
 	<a href="http://wang-zhi-yuan.github.io">http://wang-zhi-yuan.github.io</a></p>
