--- a/awards.html
+++ b/awards.html
@@ -20,7 +20,7 @@ urchinTracker();
 <tbody><tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Zhiyuan Wang</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="https://wang-zhi-yuan.github.io/" class="current">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
