--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@ urchinTracker();
 </div>
 
 
-<h2>Journals</h2>
+<h2>Journal</h2>
 <p>
 	<ol>								
 	<li class="list-paper">
@@ -57,7 +57,7 @@ urchinTracker();
 </p>
 
 
-<h2>Conferences</h2>
+<h2>Conference</h2>
 <p>
 	<ol>				
 								
