--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@ urchinTracker();
 	<li class="list-paper">
 		<b>Z. Wang</b>, Lin Gao, and  J. Huang,
 		"Price Discrimination for Wireless Data Plans with Time Flexibility,"
-		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), under review.
+		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), major revision.
 		</li>
 									
 	<li class="list-paper">
@@ -104,7 +104,13 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-01-20.
+Page generated 
+<span id="cg">2016/12/21 上午12:00:00</span>
+<script>
+<!--这个cg就是span的id，初始化Date时间并转化为字符string类型,每1000毫秒，setInterval() 就会调用函数，直到被关闭。-->
+setInterval("cg.innerHTML=new Date().toLocaleString()",1000);
+</script>
+
 </div>
 </div>
 </td>
