--- a/awards.html
+++ b/awards.html
@@ -51,7 +51,7 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-01-20.
+Page generated 2019-01-25
 </div>
 </div>
 </td>
