--- a/research.html
+++ b/research.html
@@ -47,7 +47,7 @@ We will design and analyze various smart data pricing mechanisms, such as the ti
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-01-20.
+Page generated 2019-01-25
 </div>
 </div>
 </td>
