--- a/publications.html
+++ b/publications.html
@@ -38,13 +38,13 @@ urchinTracker();
 	<li class="list-paper">
 		<b>Z. Wang</b>, Lin Gao, and  J. Huang,
 		"Price Discrimination for Wireless Data Plans with Time Flexibility,"
-		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), major revision.
+		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), under review.
 		</li>
 									
 	<li class="list-paper">
 		<b>Z. Wang</b>, Lin Gao, and  J. Huang,
 		"Duopoly Competition for Mobile Data Plans with Time Flexibility,"
-		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), minor revision.
+		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), under review.
 		</li>
 									
 	<li class="list-paper">
