--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ urchinTracker();
 <p>
 
 <ul>
+<li> <font color="red"><b>New</b></font> <a>[2019.03]</a> The paper "Duopoly Competition for Mobile Data Plans with Time Flexibility" is accepted by IEEE Transactions on Mobile Computing (TMC).</li>
 <li> <font color="red"><b>New</b></font> <a>[2018.11]</a> The paper "Economic Viability of Data Trading with Rollover" is accepted by IEEE INFOCOM 2019 (acceptance rate: 19.7%).</li>
 <li> <a>[2018.09]</a> The paper "Exploring Time Flexibility in Wireless Data Plans" is accepted by IEEE Transactions on Mobile Computing (TMC).</li>
 
@@ -97,7 +98,7 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-01-25
+Page generated 2019-03
 </div>
 </div>
 </td>
