--- a/publications.html
+++ b/publications.html
@@ -43,14 +43,15 @@ urchinTracker();
 									
 	<li class="list-paper">
 		<b>Z. Wang</b>, Lin Gao, and  J. Huang,
-		"Duopoly Competition for Mobile Data Plans with Time Flexibility,"
-		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), under review.
+		"<a href="https://arxiv.org/abs/1903.10878">Duopoly Competition for Mobile Data Plans with Time Flexibility</a>,"
+		to appear in IEEE Transactions on Mobile Computing  (<b>TMC</b>), 2019 
+		<font class="impactcolor">(IF:4.098)</font>
 		</li>
 									
 	<li class="list-paper">
 		<b>Z. Wang</b>, Lin Gao, and  J. Huang,
 		"<a href="https://ieeexplore.ieee.org/document/8476229">Exploring Time Flexibility in Wireless Data Plans</a>,"
-		IEEE Transactions on Mobile Computing  (<b>TMC</b>), 2018
+		to appear in IEEE Transactions on Mobile Computing  (<b>TMC</b>), 2018
 		<font class="impactcolor">(IF:4.098)</font>
 		</li>
 	</ol>
