--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@ urchinTracker();
 	<ol>								
 	<li class="list-paper">
 		<b>Z. Wang</b>, Lin Gao, and  J. Huang,
-		"Price Discrimination for Wireless Data Plans with Time Flexibility,"
+		"Multi-Cap Optimization for Wireless Data Plans with Time Flexibility,"
 		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), under review.
 		</li>
 									
