--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,8 @@ urchinTracker();
 	<li class="list-paper">
 		<b>Z. Wang</b>, Lin Gao, and  J. Huang,
 		"Multi-Cap Optimization for Wireless Data Plans with Time Flexibility,"
-		submitted to IEEE Transactions on Mobile Computing  (<b>TMC</b>), under review.
+		to appear in IEEE Transactions on Mobile Computing  (<b>TMC</b>), 2019
+		<font class="impactcolor">(IF:4.098)</font>
 		</li>
 									
 	<li class="list-paper">
