--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@ urchinTracker();
 	<ol>								
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang,
-		"Multi-Cap Optimization for Wireless Data Plans with Time Flexibility,"
+		"<a href="https://arxiv.org/abs/1905.05922">Multi-Cap Optimization for Wireless Data Plans with Time Flexibility,"
 		to appear in IEEE Transactions on Mobile Computing  (<b>TMC</b>), 2019
 		<font class="impactcolor">(IF:4.098)</font>
 		</li>
