--- a/awards.html
+++ b/awards.html
@@ -36,7 +36,7 @@ urchinTracker();
 <p>
 <ul>
 <li><b>Student Travel Grant</b> (ACM MobiHoc 2018, IEEE WiOpt 2018)</li>
-<li><b>Best Student Presentation Award</b> at <a href="http://ncel.ie.cuhk.edu.hk/">NCEL</a> Spring Workshop 2018</li>
+<li><b>Best Student Presentation Award</b> at <a href="http://ncel.ie.cuhk.edu.hk/">NCEL</a> Spring Workshops 2018 and 2019 </li>
 <li><b><a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a></b> (One of the 231 awardees in 2016/17) </li>
 <li><b><a href="http://www.bsef.baosteel.com/EducationFund/content/1/1A0412/1A041229535/1A041229535.pdf">Baosteel Fellowship</a></b> (One of 25 awardees in mainland China, 5 undergraduates)</li>
 <li><b>Person of the Year Finalist</b> in Jiangsu Province </li>
@@ -51,7 +51,7 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-01-25
+Page generated May 2019
 </div>
 </div>
 </td>
