--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@ urchinTracker();
 								
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
-		"Economic Viability of Data Trading with Rollover,"
+		"<a href="https://arxiv.org/abs/1905.06704">Economic Viability of Data Trading with Rollover</a>,"
 		IEEE International Conference on Computer Communications (<b>INFOCOM</b>),
 		Paris, France, April 2019 (acceptance rate: 19.7%).
 		</li>
