--- a/publications.html
+++ b/publications.html
@@ -74,7 +74,7 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang,
 		"<a href="https://dl.acm.org/citation.cfm?id=3209588">Multi-Dimensional Contract Design for Mobile Data Plan with Time Flexibility</a>,"
 		ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc),
-		Los Angeles, USA, June 2018 (Acceptance rate: 16.9%, <font color="red">CCF A</font>).
+		Los Angeles, USA, June 2018 (Acceptance rate: 16.9%, <font color="red">CCF B</font>).
 		</li>
 								
 	<li class="list-paper">
