--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@ urchinTracker();
 								
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
-		"<a href="https://arxiv.org/abs/1905.06704">Economic Viability of Data Trading with Rollover</a>,"
+		"<a href="https://ieeexplore.ieee.org/document/8737462">Economic Viability of Data Trading with Rollover</a>,"
 		IEEE International Conference on Computer Communications (INFOCOM),
 		Paris, France, April 2019 (Acceptance rate: 19.7%, <font color="red">CCF A</font>).
 		</li>
