--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@ urchinTracker();
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang,
 		"<a href="https://ieeexplore.ieee.org/document/8476229">Exploring Time Flexibility in Wireless Data Plans</a>,"
-		to appear in IEEE Transactions on Mobile Computing  (TMC), 2018
+		IEEE Transactions on Mobile Computing (TMC), vol. 18, no. 9, pp. 2048-2061, September 2019.
 		<font class="impactcolor">(IF:4.098, <font color="red">CCF A</font>)</font>
 		</li>
 	</ol>
