--- a/publications.html
+++ b/publications.html
@@ -66,10 +66,9 @@ urchinTracker();
 								
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
-		"Economic Viability of Data Trading with Rollover,"
+		"<a href="https://ieeexplore.ieee.org/document/8737462">Economic Viability of Data Trading with Rollover</a>,"
 		IEEE International Conference on Computer Communications (INFOCOM),
 		Paris, France, April 2019 (Acceptance rate: 19.7%, <font color="red">CCF A</font>),
-		<a href="https://ieeexplore.ieee.org/document/8737462">[PDF]</a>
 		</li>
 								
 	<li class="list-paper">
