--- a/awards.html
+++ b/awards.html
@@ -39,7 +39,7 @@ urchinTracker();
 <li>Student Travel Grant (ACM MobiHoc 2018, IEEE WiOpt 2018)</li>
 <li>Best Student Presentation Award at <a href="http://ncel.ie.cuhk.edu.hk/">NCEL</a> Spring Workshops 2018 and 2019 </li>
 <li><b><a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a></b> (One of the 231 awardees in 2016/17) </li>
-<li><b><a href="http://res.bsef.baosteel.com/content/1/1A0412/1A041229535/1A041229535.pdf?token=E1A20014B32AE28A370AB54BC54DBC18435A1EB1">Baosteel Fellowship</a></b> (One of 25 awardees in mainland China, 5 undergraduates)</li>
+<li><b><a href="http://res.bsef.baosteel.com/content/1/1A0412/1A041229535/1A041229535.pdf?token=E1A20014B32AE28A370AB54BC54DBC18435A1EB1">Baosteel Fellowship 2015</a></b> (One of 25 awardees in mainland China, 5 undergraduates)</li>
 <li><b>Person of the Year Finalist</b> in Jiangsu Province </li>
 <li>National Scholarship in Southeast Unviersity</li>
 <li>Excellent Academic Performance Award (GPA Top 3%) in Southeast University</li>
