--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ urchinTracker();
 <div id="toptitle">
 	<h1>Zhiyuan Wang (王志远)</h1>
 	<br />
-	<p>I obtain Ph.D. degree at <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, advised by Prof. <a href="http://jianwei.ie.cuhk.edu.hk/">Jianwei Huang</a>.
+	<p>I received Ph.D. degree from <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, advised by Prof. <a href="http://jianwei.ie.cuhk.edu.hk/">Jianwei Huang</a>.
 	</p>
 </div>
 
