--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ urchinTracker();
 
 <ul>
 <li> <font color="red"><b>New</b></font> 
+	<a>[2019.12]</a> 
+	The paper "Travel with Your Mobile Data Plan: A Location-Flexible Data Service" is accepted by IEEE INFOCOM 2020 (acceptance rate: 19.8%).
+	</li>
+<li> <font color="red"><b>New</b></font> 
 	<a>[2019.09]</a> 
 	The paper "Towards Flexible Wireless Data Services" is accepted by IEEE Communication Magazine.
 	</li>
