--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,14 @@ urchinTracker();
 <h2>Conference</h2>
 <p>
 	<ol>				
-								
+	
+	<li class="list-paper">
+		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang,
+		"Travel with Your Mobile Data Plan: A Location-Flexible Data Service,"
+		IEEE International Conference on Computer Communications (INFOCOM),
+		Beijing, China, April 2020 (Acceptance rate: 19.8%, <font color="red">CCF A</font>),
+		</li>
+		
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
 		"<a href="https://ieeexplore.ieee.org/document/8737462">Economic Viability of Data Trading with Rollover</a>,"
