--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@ urchinTracker();
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
 		"Towards Flexible Wireless Data Services,"
-		to appear in IEEE Communication Magazine, Special Issue on The Evolution of Telecom Business, Economy and Policies, 2019
+		IEEE Communication Magazine, Special Issue on The Evolution of Telecom Business, Economy and Policies, 2019
 		(Impact Factor: 10.356, <font color="red">SCI 一区</font>)
 		</li>
 		
