--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@ urchinTracker();
 			Information Engineering<br>
 			Southeast University, Nanjing<br>
 										
-			<br/>								
-			<b>Research Interests: </b>  <br>
-				Mobile Computing, Network Economics, Game Theorey
-			</p>
+			
 			
 			<p style="margin-top: 10px">
 			<b>
@@ -85,9 +82,24 @@ urchinTracker();
 </tbody>
 </table>
 
+
+<h2>Research Interests</h2>							
+	<b>Research Areas: </b>  <br>
+		- Mobile Computing, edge computing <br>
+		- Network economics, crowd-learning, Internet of Things (IoT)<br>
+	</p>
+										
+	<b>Methodologies: </b>  <br>
+		- On-line optimization, Bandit learning<br>
+		- Stochastic modeling, Mean field analysis<br>
+		- Game theory, Contract theory, Incentive mechanism design
+	</p>
+
+
+
 <h2>Contact</h2>
 	<p>
-	SHB 825, CUHK, Shatin, Hong Kong<br>
+	SHB 825, SHB 910, CUHK, Shatin, Hong Kong<br>
 	Tel: (852) 6557 4107<br>
 	<a href="mailto:MailToZhiyuanWang@gmail.com</">mailtozhiyuanwang@gmail.com</a><br>
 	<a href="http://wang-zhi-yuan.github.io">http://wang-zhi-yuan.github.io</a></p>
