--- a/publications.html
+++ b/publications.html
@@ -37,8 +37,8 @@ urchinTracker();
 	<ol>
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
-		"Towards Flexible Wireless Data Services,"
-		IEEE Communication Magazine, Special Issue on The Evolution of Telecom Business, Economy and Policies, 2019
+		"<a href="https://ieeexplore.ieee.org/abstract/document/8930821">Towards Flexible Wireless Data Services</a>,"
+		IEEE Communication Magazine, vol. 57, no. 12, pp. 25-30, December, 2019
 		(Impact Factor: 10.356, <font color="red">SCI 一区</font>)
 		</li>
 		
