--- a/publications.html
+++ b/publications.html
@@ -75,21 +75,21 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang,
 		"Travel with Your Mobile Data Plan: A Location-Flexible Data Service,"
 		IEEE International Conference on Computer Communications (INFOCOM),
-		Beijing, China, April 2020 (Acceptance rate: 19.8%, <font color="red">CCF A</font>),
+		Beijing, China, April 2020 (<font color="blue">Acceptance rate: 19.8%</font>, <font color="red">CCF A</font>),
 		</li>
 		
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
 		"<a href="https://ieeexplore.ieee.org/document/8737462">Economic Viability of Data Trading with Rollover</a>,"
 		IEEE International Conference on Computer Communications (INFOCOM),
-		Paris, France, April 2019 (Acceptance rate: 19.7%, <font color="red">CCF A</font>),
+		Paris, France, April 2019 (<font color="blue">Acceptance rate: 19.7%</font>, <font color="red">CCF A</font>),
 		</li>
 								
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang,
 		"<a href="https://dl.acm.org/citation.cfm?id=3209588">Multi-Dimensional Contract Design for Mobile Data Plan with Time Flexibility</a>,"
 		ACM International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc),
-		Los Angeles, USA, June 2018 (Acceptance rate: 16.9%, <font color="red">CCF B</font>).
+		Los Angeles, USA, June 2018 (<font color="blue">Acceptance rate: 16.9%</font>, <font color="red">CCF B</font>).
 		</li>
 								
 	<li class="list-paper">
