--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@ More flexible wireless data service is often in terms of providing additional fl
 <br><br>
 <li>
 	<b>The trading market, allowing users to sell the leftover quota to or buy extra quota from others, is a user-flexible mechanism.</b>
-	We formulate the interactions between the MNO and mobile users as a multi-slot dynamic game. 
+	We formulate the interactions between the MNO and mobile users as a Multi-Agent Dynamic Game. 
 	Specifically, in each time slot (e.g., every day), the MNO first determines the selling and buying prices with the goal of revenue maximization, then each user decides his trading
 action (by solving a dynamic programming problem) to maximize his long-term payoff. 
 	Due to the availability of monthly data rollover, a user’s daily trading decision corresponds to a dynamic programming problem with two time scales (i.e., day-to-day and
@@ -72,12 +72,12 @@ revenue by 25% and all users’ payoff by 17% on average.
 <br><br>
 <li>
 	<b>The day-pass service, allowing users to access his domestic data service with a daily fee in overseas locations, is a location-flexible mechanism.</b>
-	This paper studies the economic effect of the location-flexibility on the overseas market. 
+	We study the economic effect of the location-flexibility on the overseas market. 
 	The overseas market comprises users who travel overseas within the month, thus is monthly variant. 
 	Each user decides his joint flexibility configuration and data consumption (J-FCDC) every day. 
 	The user’s J-FCDC problem is an on-line payoff maximization. 
 	We analyze its off-line problem (which is NP-hard) and design an on-line strategy with provable performance. 
-	Moreover, we propose a pricing policy for the location-flexible service without relying on the market statistic information. 
+	Moreover, we propose a dynamic pricing policy (based on Multi-Arm Bandit learning) for the location-flexible service without relying on the market statistic information. 
 	We find that the location-flexibility induces users to consume more data in low-valuation days, and the MNO benefits from stimulating users’ data consumption through an appropriate
 pricing. 
 	Numerical results based on empirical data show that the location-flexibility improves the MNO’s revenue by 18% and the users’
