--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@ urchinTracker();
 
 
 <h2>Flexible Wireless Network Pricing</h2>
-<p>
+
 Nowadays the growing data demand and more severe market competition force mobile network operators (MNOs) to offer more flexible wireless data services. 
 The classic wireless data service is a three-part tariff, consisting of a monthly data cap, a monthly subscription fee, and a per-unit fee. 
 More flexible wireless data service is often in terms of providing additional flexibility in terms of <b>time</b>, <b>user</b>, and <b>location</b>.	
@@ -90,16 +90,18 @@ payoffs by 12% on average.
 
 
 
+<h2>Edge Computing Operation & Management </h2>
 
 
-</p>
+
+<h2>Crowd-Leanring in Smart City </h2>
 
 
 
 
 <div id="footer">
 <div id="footer-text">
-Page generated September 2019
+Page generated January 2020
 </div>
 </div>
 </td>
