--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@ urchinTracker();
 	<b>Methodologies: </b>  <br>
 		- On-line optimization, Bandit learning<br>
 		- Stochastic modeling, Mean field analysis<br>
-		- Game theory, Contract theory, Incentive mechanism design
+		- Game theory, Contract theory, Economic mechanism design
 	</p>
 
 
 
 <h2>Contact</h2>
 	<p>
-	SHB 825, SHB 910, CUHK, Shatin, Hong Kong<br>
+	SHB 910, CUHK, Shatin, Hong Kong<br>
 	Tel: (852) 6557 4107<br>
 	<a href="mailto:MailToZhiyuanWang@gmail.com</">mailtozhiyuanwang@gmail.com</a><br>
 	<a href="http://wang-zhi-yuan.github.io">http://wang-zhi-yuan.github.io</a></p>
