--- a/research.html
+++ b/research.html
@@ -32,7 +32,22 @@ urchinTracker();
 </div>
 
 
-<h2>Flexible Wireless Network Pricing</h2>
+
+
+<h2>Edge Computing Operation & Management </h2>
+
+
+
+<h2>Crowd-Leanring in Smart City </h2>
+
+
+
+
+
+
+
+
+<h2>Flexible Mobile Network Optimization</h2>
 
 Nowadays the growing data demand and more severe market competition force mobile network operators (MNOs) to offer more flexible wireless data services. 
 The classic wireless data service is a three-part tariff, consisting of a monthly data cap, a monthly subscription fee, and a per-unit fee. 
@@ -90,11 +105,6 @@ payoffs by 12% on average.
 
 
 
-<h2>Edge Computing Operation & Management </h2>
-
-
-
-<h2>Crowd-Leanring in Smart City </h2>
 
 
 
