--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@ urchinTracker();
 
 <h2>Research Interests</h2>							
 	<b>Research Areas: </b>  <br>
-		- Mobile Computing, edge computing <br>
-		- Network economics, crowd-learning, Internet of Things (IoT)<br>
+		- Edge and Cloud computing, Internet of Things (IoT) <br>
+		- Network economics, Crowd-learning, <br>
 	</p>
 										
 	<b>Methodologies: </b>  <br>
-		- On-line optimization, Bandit learning<br>
+		- Online optimization and learning<br>
 		- Stochastic modeling, Mean field analysis<br>
-		- Game theory, Contract theory, Economic mechanism design
+		- Game theory, Mechanism design
 	</p>
 
 
