--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,7 @@ urchinTracker();
 		"Monetizing Edge Service in Mobile Internet Ecosystem,"<br>
 		to appear in IEEE Transactions on Mobile Computing (TMC), 2020<br>
 		(Impact Factor: 4.474, <font color="red">CCF A</font>)
+		<a href="https://ieeexplore.ieee.org/document/9201367">[Paper]</a>
 		</li>
 		
 	<li class="list-paper">
