--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@ urchinTracker();
 
 
 
-<h2>Edge Computing </h2>
+<h2>Edge Computing & Cloud Computing </h2>
 In mobile Internet ecosystem, Mobile Users (MUs) purchase wireless data services from Internet Service Provider (ISP) to access to Internet and acquire the interested content services (e.g., online game) from Content Provider (CP). 
 The popularity of intelligent functions (e.g., AI and 3D modeling) increases the computation-intensity of the content services, leading to a growing computation pressure for the MUs' resource-limited devices. 
 To this end, edge computing service is emerging as a promising approach to alleviate the MUs' computation pressure while keeping their quality-of-service, via offloading some computation tasks of MUs to edge (computing) servers deployed at the local network edge. 
@@ -59,7 +59,7 @@ Thus, Edge Service Provider (ESP), who deploys the edge servers and offers the e
 
 
 
-<h2>Flexible Mobile Network Optimization</h2>
+<h2>Network Resource Pricing & Mechanism Design</h2>
 
 The growing data demand and more severe market competition force mobile network operators (MNOs) to offer more flexible wireless data services. 
 The classic wireless data service is a three-part tariff, consisting of a monthly data cap, a monthly subscription fee, and a per-unit fee (for exceeding the data cap). 
