--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ urchinTracker();
 			<p>
 			<b>Post-Doctoral Fellow</b> (2019/10~Present)	<br>
 			Computer Science & Engineering<br>
-			The Chinese University of Hong Kong<br><br>
+			CUHK, Hong Kong<br><br>
 			
 			
 			<b>Ph.D.</b> (2016/08~2019/09)	<br>
 			Information Engineering<br>
-			The Chinese University of Hong Kong <br><br>
+			CUHK, Hong Kong <br><br>
 										
 										
 			<b>B.S.</b> (2012/08~2016/07)	<br>
@@ -76,7 +76,7 @@ urchinTracker();
 	<td> </td>	<td> </td>
 	<td> </td>	<td> </td>
 	<td> </td>	<td> </td>
-	<td><img src="./file/photo.jpg" alt="Photo" width="230px" >&nbsp;</td>
+	<td><img src="./file/photo.jpg" alt="Photo" width="200px" >&nbsp;</td>
 	
 </tr>
 </tbody>
@@ -101,7 +101,7 @@ urchinTracker();
 	<p>
 	SHB 910, CUHK, Shatin, Hong Kong<br>
 	Tel: (852) 6557 4107<br>
-	<a href="mailto:MailToZhiyuanWang@gmail.com</">mailtozhiyuanwang@gmail.com</a><br>
+	<a href="mailto:zhiyuanwang@cuhk.edu.hk</">zhiyuanwang@cuhk.edu.hk</a><br>
 	<a href="http://wang-zhi-yuan.github.io">http://wang-zhi-yuan.github.io</a></p>
 
 
