--- a/publications.html
+++ b/publications.html
@@ -92,6 +92,13 @@ urchinTracker();
 	
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang,
+		"Taming Time-Varying Information Asymmetry in Fresh Status Acquisition,"<br>
+		IEEE International Conference on Computer Communications (INFOCOM),	Online Conference, May 2021 <br>
+		(<font color="blue">Acceptance rate: 19.9%</font>, <font color="red">CCF A</font>)
+		</li>
+		
+	<li class="list-paper">
+		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang,
 		"Travel with Your Mobile Data Plan: A Location-Flexible Data Service,"<br>
 		IEEE International Conference on Computer Communications (INFOCOM),	Online Conference, April 2020 <br>
 		(<font color="blue">Acceptance rate: 19.8%</font>, <font color="red">CCF A</font>)
