--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@ urchinTracker();
 
 
 
-<h2>Crowd-based Reinforcement Leanring </h2>
+<h2>AoI in Real-time State Acquisition </h2>
 
 
 
@@ -59,7 +59,7 @@ Thus, Edge Service Provider (ESP), who deploys the edge servers and offers the e
 
 
 
-<h2>Network Resource Pricing & Mechanism Design</h2>
+<h2>Mobile Internet Pricing, and Mechanism Design</h2>
 
 The growing data demand and more severe market competition force mobile network operators (MNOs) to offer more flexible wireless data services. 
 The classic wireless data service is a three-part tariff, consisting of a monthly data cap, a monthly subscription fee, and a per-unit fee (for exceeding the data cap). 
