--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,7 @@ urchinTracker();
 		
 	<li class="list-paper">
 		<b>Zhiyuan Wang</b>, Lin Gao, Jianwei Huang, and Biying Shou,
-		"Towards Flexible Wireless Data Services,"<br>
+		"Toward Flexible Wireless Data Services,"<br>
 		IEEE Communication Magazine, vol. 57, no. 12, pp. 25-30, December, 2019<br>
 		(Impact Factor: 11.052)
 		<a href="https://ieeexplore.ieee.org/abstract/document/8930821">[Paper]</a>
