--- a/awards.html
+++ b/awards.html
@@ -52,7 +52,7 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated July 2020
+Page generated 2021
 </div>
 </div>
 </td>
