--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, and Jianwei Huang,	
 		"Location-Flexible Mobile Data Service in Overseas Market,"<br>
 		to appear in IEEE Transactions on Mobile Computing (TMC), 2020<br>
-		(Impact Factor: 4.474, <font color="red">CCF A</font>)
+		(<font color="red">CCF A</font>)
 		<a href="https://ieeexplore.ieee.org/document/9161283">[Paper]</a>
 		</li>
 	
@@ -47,7 +47,7 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, Tong Wang, and Jingjing Luo,
 		"Monetizing Edge Service in Mobile Internet Ecosystem,"<br>
 		to appear in IEEE Transactions on Mobile Computing (TMC), 2020<br>
-		(Impact Factor: 4.474, <font color="red">CCF A</font>)
+		(<font color="red">CCF A</font>)
 		<a href="https://ieeexplore.ieee.org/document/9201367">[Paper]</a>
 		</li>
 		
@@ -63,7 +63,7 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang,
 		"Multi-Cap Optimization for Wireless Data Plans with Time Flexibility,"<br>
 		IEEE Transactions on Mobile Computing (TMC), vol. 19, no. 9, pp. 2145-2159, June 2019<br>
-		(Impact Factor: 4.474, <font color="red">CCF A</font>)
+		(<font color="red">CCF A</font>)
 		<a href="https://ieeexplore.ieee.org/document/8731760">[Paper]</a>
 		</li>
 									
@@ -71,7 +71,7 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang,
 		"Duopoly Competition for Mobile Data Plans with Time Flexibility,"<br>
 		IEEE Transactions on Mobile Computing  (TMC), vol. 19, no. 6, pp. 1286-1298, April 2019 <br>
-		(Impact Factor: 4.474, <font color="red">CCF A</font>) 
+		(<font color="red">CCF A</font>)
 		<a href="https://ieeexplore.ieee.org/document/8685154">[Paper]</a>
 		</li>
 									
@@ -79,7 +79,7 @@ urchinTracker();
 		<b>Zhiyuan Wang</b>, Lin Gao, and  Jianwei Huang,
 		"Exploring Time Flexibility in Wireless Data Plans,"<br>
 		IEEE Transactions on Mobile Computing (TMC), vol. 18, no. 9, pp. 2048-2061, September 2018 <br>
-		(Impact Factor: 4.474, <font color="red">CCF A</font>)
+		(<font color="red">CCF A</font>)
 		<a href="https://ieeexplore.ieee.org/document/8476229">[Paper]</a>		
 		</li>
 	</ol>
@@ -154,7 +154,7 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated July 2020
+Page generated 2021
 
 </div>
 </div>
