--- a/research.html
+++ b/research.html
@@ -47,9 +47,9 @@ The popularity of intelligent functions (e.g., AI and 3D modeling) increases the
 To this end, edge computing service is emerging as a promising approach to alleviate the MUs' computation pressure while keeping their quality-of-service, via offloading some computation tasks of MUs to edge (computing) servers deployed at the local network edge. 
 Thus, Edge Service Provider (ESP), who deploys the edge servers and offers the edge computing service, becomes an upcoming new stakeholder in the ecosystem.<br>
 
-<img src="./research/Ecosystem.png" alt="Photo" height="170px" >&nbsp;
-<img src="./research/Ecosystem_MUPayoff.png" alt="Photo" height="175px" >&nbsp;
-<img src="./research/Ecosystem_ESPRevenue.png" alt="Photo" height="180px" >&nbsp;
+<img src="./research/Ecosystem.png" alt="Photo" height="150px" >&nbsp;
+<img src="./research/Ecosystem_MUPayoff.png" alt="Photo" height="155px" >&nbsp;
+<img src="./research/Ecosystem_ESPRevenue.png" alt="Photo" height="155px" >&nbsp;
 
 
 
@@ -74,7 +74,7 @@ The more flexible wireless data service often provides users with some additiona
 	In this reseach direction, we study the economic effect of different rollover mechanisms of AT&T and China Mobile.
 	Moreover, we take into account the pricing optimization, price discrimination based on the Contract Theory, and the game-theoretical analysis of market competition.
 </li>
-	<img src="./research/Rollover_Mechanisms.png" alt="Photo" height="170px" >&nbsp;
+	<img src="./research/Rollover_Mechanisms.png" alt="Photo" height="150px" >&nbsp;
 
 
 <br><br>
@@ -88,8 +88,8 @@ month-to-month).
 	We also show that the rollover mechanism makes users sell less and buy more data, hence it increases the total demand while decreasing the total supply in the data trading
 market. 
 </li>
-<img src="./research/Trading.png" alt="Photo" height="170px" >&nbsp;
-<img src="./research/Trading_Insights.png" alt="Photo" height="179px" >&nbsp;
+<img src="./research/Trading.png" alt="Photo" height="150px" >&nbsp;
+<img src="./research/Trading_Insights.png" alt="Photo" height="159px" >&nbsp;
 
 
 
@@ -103,8 +103,8 @@ market.
 	We analyze its off-line problem (i.e., NP-hard) and design an on-line strategy with provable performance. 
 	We also propose a dynamic pricing policy for the location-flexible service without relying on the market statistic information.
 </li>
-	<img src="./research/Location.png" alt="Photo" height="170px" >&nbsp;
-	<img src="./research/Location_Performance.png" alt="Photo" height="170px" >&nbsp;
+	<img src="./research/Location.png" alt="Photo" height="150px" >&nbsp;
+	<img src="./research/Location_Performance.png" alt="Photo" height="150px" >&nbsp;
 </ul>
 </p>
 
@@ -116,7 +116,7 @@ market.
 
 <div id="footer">
 <div id="footer-text">
-Page generated July 2020
+Page generated 2021
 </div>
 </div>
 </td>
