--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ urchinTracker();
 <div id="toptitle">
 	<h1>Zhiyuan Wang (王志远)</h1>
 	<br />
-	<p>Zhiyuan Wang is currently a Post-Doctoral Fellow in <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
+	<p>I am currently Post-Doctoral Fellow in <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
 		advised by Prof. <a href="http://www.cse.cuhk.edu.hk/~cslui/">John C.S. Lui</a>.<br>
-		He received Ph.D. degree from <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
+		I received  Ph.D. degree from <a href="http://www.ie.cuhk.edu.hk/main/index.shtml">CUHK</a>, 
 		advised by Prof. <a href="http://jianwei.ie.cuhk.edu.hk/">Jianwei Huang</a>.
 	</p>
 </div>
@@ -146,7 +146,7 @@ urchinTracker();
 
 <div id="footer">
 <div id="footer-text">
-Page generated July 2020
+Page generated 2021
 </div>
 </div>
 </td>
